--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,4 @@
-body {
-  margin: 0; }
-
-.task-main-container {
-  width: 50%;
-  margin: 100px auto;
-  border: 1px solid black;
-  text-align: center; }
-
-.task-list-container {
-  width: 50%;
-  margin: 20px auto;
-  border: 1px solid black;
-  padding: 5px;
-  text-align: left; }
-
-.task-list-item {
-  list-style: none;
-  position: relative; }
-
-.task-list-item-Id {
-  position: absolute;
-  left: -25px; }
+* {
+  font-family: 'Lora', serif; }
 
 /*# sourceMappingURL=style.css.map */
