--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,36 +1,3 @@
-body {
-    margin: 0;
-}
-
-.task-main-container {
-    width: 50%;
-    margin: 100px auto;
-    border:1px solid black;
-    text-align: center;
-}
-
-.task-list-container {
-    width: 50%;
-    margin: 20px auto;
-    border:1px solid black;
-    padding: 5px;
-    text-align: left;
-}
-
-.task-list-item {
-    list-style: none;
-    position: relative;
-}
-
-.task-list-item-Id {
-    position: absolute;
-    left: -25px;
-}
-
-.input-name-task {
-
-}
-
-.input-add-task {
-
+* {
+	font-family: 'Lora', serif;
 }
