Have added slider for related elements, also finished footer. Still need to fix body's  width.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,6 @@
-* {
-	font-family: 'Lora', serif;
-}
+@import 'General/general';
+@import 'TopMenu/hero';
+@import 'SearchedUser/avatar';
+@import 'Post/post';
+@import 'Related/related';
+@import 'Footer/footer';
