--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,234 @@
 * {
-  font-family: 'Lora', serif; }
+  font-family: 'Lora', serif;
+  width: 100%;
+  margin: 0;
+  display: block;
+  padding: 0; }
+
+body {
+  background-color: #050505;
+  color: white;
+  height: 100%;
+  margin: 0;
+  width: 100%;
+  padding: 0; }
+
+.head-component-size {
+  width: 100vw;
+  height: 151px;
+  position: relative;
+  overflow: hidden; }
+
+.company-title {
+  color: black; }
+
+.company-main-logo {
+  width: 33px; }
+
+.herobanner-background-size {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  height: auto;
+  z-index: -1; }
+
+.nav-menu-display {
+  display: flex;
+  border-top: solid 4px #ba1f33; }
+
+.nav-tab-color {
+  text-align: center;
+  color: white;
+  background-color: #44443f;
+  padding: 10px; }
+
+.nav-tab-color + .nav-tab-color {
+  border-left: solid 1px white; }
+
+.avatar-wrapper-circle {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border: solid 2px white;
+  border-radius: 50% 50%;
+  margin: 0 auto; }
+
+.searched-user-component {
+  margin: 3% auto; }
+
+.searched-username, .searched-email {
+  background-color: #44443f;
+  text-transform: uppercase;
+  margin: 0 auto;
+  text-align: center;
+  height: 25px; }
+
+.searched-username {
+  width: 80%;
+  font-size: 18px; }
+
+.searched-email {
+  width: 70%;
+  font-size: 14px; }
+
+.avatar-pic-size {
+  height: 100%; }
+
+.search-bar-wrapper {
+  background-color: white;
+  height: 25px; }
+
+.search-bar-color {
+  color: white;
+  background-color: black;
+  width: 70%;
+  display: inline-block;
+  margin: 1%; }
+
+.search-action-size {
+  width: 20%;
+  display: inline-block; }
+
+.add-make-money {
+  width: 80%;
+  margin: 30px auto; }
+
+.nav-menu-display {
+  display: flex; }
+
+.nav-tab-color {
+  text-align: center;
+  color: white; }
+
+.title-section {
+  border-top: solid 4px #ba1f33;
+  background-color: #44443f;
+  padding: 10px; }
+
+.post-component {
+  position: relative;
+  padding: 5% 0;
+  background-color: #1C1C1C;
+  margin: 10% 0; }
+
+.bio-action-opener {
+  background-color: #050505;
+  height: 54px;
+  width: 54px;
+  border-radius: 50% 50%;
+  color: white;
+  cursor: pointer;
+  margin: 0 auto; }
+
+.bio-content-hidden {
+  background-color: red;
+  height: 0;
+  border-top: solid 4px #ba1f33;
+  transition: 1s;
+  overflow: hidden; }
+
+.bio-content-showing {
+  background-color: red;
+  height: 100%;
+  border-top: solid 4px #ba1f33;
+  transition: 1s; }
+
+.bio-wrapper-position {
+  position: relative; }
+
+.post-frame-border {
+  background-color: #44443f;
+  width: 90%;
+  margin: 10px auto;
+  padding: 10px; }
+
+.post-container {
+  background-color: white;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 80%;
+  margin: 0px auto;
+  padding: 10px; }
+
+.date-container {
+  padding: 10px; }
+
+.post-img-size {
+  height: 80px;
+  overflow: hidden; }
+
+.interaction-post-display {
+  display: flex;
+  justify-content: space-around; }
+
+.post-img-blur {
+  filter: blur(2px); }
+
+.social-btn-size {
+  background-color: white;
+  height: 38px;
+  width: 38px;
+  border-radius: 50% 50%; }
+
+.more-btn-size {
+  background-color: red;
+  height: 55px;
+  width: 55px;
+  border-radius: 50% 50%; }
+
+.related-component {
+  width: 150px;
+  display: inline-block;
+  border: 2px solid white;
+  padding: 3%;
+  background-color: black; }
+
+.btn-more-size {
+  color: white;
+  border: none;
+  background-color: transparent;
+  text-align: left;
+  padding: 2%;
+  position: absolute;
+  bottom: 0; }
+
+.rel-post-inf {
+  position: relative;
+  background-color: #262626;
+  height: 103px;
+  padding: 5%; }
+
+.related-elements-container {
+  position: relative;
+  width: 160%;
+  padding: 20px; }
+
+.container-hidden-content {
+  overflow: hidden;
+  overflow-x: auto; }
+
+.related-image-size {
+  height: 124px;
+  position: relative;
+  overflow: hidden; }
+
+.related-avatar-size {
+  height: 100%; }
+
+.title-footer {
+  text-align: center;
+  padding: 2%; }
+
+.footer-main-logo {
+  width: 53px;
+  margin: 0 auto; }
+
+.footer-component {
+  background-color: #282828; }
+
+.copyright-footer {
+  border-top: 1px solid white;
+  padding: 4% 0% 4% 4%; }
 
 /*# sourceMappingURL=style.css.map */
