--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'General/general';
 @import 'TopMenu/hero';
+@import 'Adds/adds';
 @import 'SearchedUser/avatar';
 @import 'Post/post';
 @import 'Related/related';
