--- a/src/sass/Related/_related.scss
+++ b/src/sass/Related/_related.scss
@@ -3,6 +3,7 @@
 	display: inline-block;
 	border: 2px solid white;
 	padding: 3%;
+	margin: 10px;
 	background-color: black;
 }
 
@@ -25,8 +26,10 @@
 
 .related-elements-container {
 	position: relative;
-	width: 160%;
+	display: flex;
+	flex-direction: row;
 	padding: 20px;
+	justify-content: space-between;
 }
 
 .container-hidden-content {
