--- a/lab2/src/css/style.css
+++ b/lab2/src/css/style.css
@@ -8,12 +8,12 @@ body {
   background-color: #050505;
   color: white;
   height: 100%;
-  margin: 0;
-  width: 100%;
+  margin: 0 auto;
+  max-width: 980px;
   padding: 0; }
 
 .head-component-size {
-  width: 100vw;
+  width: 100%;
   height: 151px;
   position: relative;
   overflow: hidden; }
@@ -35,7 +35,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  max-width: 100%;
+  width: 100%;
   height: auto;
   z-index: -1; }
 
@@ -94,7 +94,9 @@ body {
 .search-bar-wrapper {
   background-color: white;
   height: 30px;
-  padding: 5px; }
+  padding: 5px;
+  width: 80%;
+  margin: 0 auto; }
 
 .search-bar-color {
   color: white;
@@ -129,7 +131,8 @@ body {
   position: relative;
   padding: 5% 0;
   background-color: #1C1C1C;
-  margin: 10% 0; }
+  margin: 10% 0;
+  box-shadow: 0px 2px 10px #ba1f33; }
 
 .bio-action-opener {
   background-color: #050505;
@@ -265,5 +268,29 @@ body {
 .copyright-footer {
   border-top: 1px solid white;
   padding: 4% 0% 4% 4%; }
+
+@media only screen and (min-width: 600px) {
+  .head-component-size {
+    height: 300px; }
+
+  .searched-username {
+    width: 60%; }
+
+  .searched-email {
+    width: 50%; }
+
+  .post-frame-border {
+    width: 70%; }
+
+  .post-img-size {
+    width: 90%;
+    margin: 0 auto;
+    height: 100px; }
+
+  .date-container {
+    padding: 10px 30px; }
+
+  .related-component {
+    width: 200px; } }
 
 /*# sourceMappingURL=style.css.map */
