--- a/lab2/src/sass/General/_general.scss
+++ b/lab2/src/sass/General/_general.scss
@@ -9,7 +9,7 @@ body {
 	background-color: #050505;
 	color: white;
 	height: 100%;
-	margin: 0;
-	width: 100%;
+	margin: 0 auto;
+	max-width: 980px;
 	padding: 0;
 }
