--- a/lab2/src/sass/TopMenu/_hero.scss
+++ b/lab2/src/sass/TopMenu/_hero.scss
@@ -1,5 +1,5 @@
 .head-component-size {
-	width: 100vw;
+	width: 100%;
 	height: 151px;
 	position: relative;
 	overflow: hidden;
@@ -25,7 +25,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	max-width: 100%;
+	width: 100%;
 	height: auto;
 	z-index: -1;
 }
