--- a/lab3/src/sass/style.scss
+++ b/lab3/src/sass/style.scss
@@ -5,4 +5,8 @@
 @import 'Post/post';
 @import 'Related/related';
 @import 'Footer/footer';
+
+// Media Query.
+// /////////////
 @import 'Medias/tablet';
+@import 'Medias/desktop';
