Have added functionality to open images from posts.

--- a/lab3/src/css/style.css
+++ b/lab3/src/css/style.css
@@ -177,9 +177,15 @@ body {
 .date-container {
   padding: 10px; }
 
-.post-img-size {
+.post-container-hidden {
   height: 80px;
-  overflow: hidden; }
+  overflow: hidden;
+  transition: 1; }
+
+.post-container-showing {
+  height: auto;
+  overflow: hidden;
+  transition: 1; }
 
 .interaction-post-display {
   display: flex;
@@ -187,6 +193,10 @@ body {
 
 .post-img-blur {
   filter: blur(2px);
+  width: 100%; }
+
+.post-img-Noblur {
+  filter: blur(0px);
   width: 100%; }
 
 .social-btn-size {
